Update styles to ensure responsiveness on small screens

--- a/styles.css
+++ b/styles.css
@@ -23,13 +23,20 @@ main {
 }
 
 @media (max-width: 768px) {
-  main, #expense-form {
+  main {
      display: flex;
      flex-direction: column;
      align-items: center;
   }
+  #expense-form {
+    width: 90vw !important;
+  }
+  #expenses {
+    width: 90vw !important;
+    max-width: 90% !important;
+  }
   #actions button {
-    margin: 20px 0;
+    margin: 30px 0;
   }
 }
 
